[package]
name = "boomerang_br"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.16.0"
glm = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[[example]]
name = "test_server"

[[example]]
name = "test_client"

[[example]]
name = "texture_test"